--- a/sormas-ui/pom.xml
+++ b/sormas-ui/pom.xml
@@ -39,6 +39,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 		</dependency>
